added user managment and exams

--- a/frontend/studente/src/assets/i18n/en.json
+++ b/frontend/studente/src/assets/i18n/en.json
@@ -1,5 +1,56 @@
-
 {
-"home_experiences_label": "Experiences",
-  "home_training_label": "Training"
+  "home_experiences_label": "Le mie esperience",
+  "home_training_label": "Percorso formativo",
+  "home_experiences_label": "Le mie esperience",
+  "home_stage_label": "Alternanza scuola-lavoro",
+  "home_activity_label": "Attivita`",
+  "home_events_label": "Eventi",
+  "home_cv_label": "Curriculum Vitae",
+  "home_certifications_label": "Certificazioni",
+  "stage_order_label": "Ordina",
+  "stage_filter_placeholder": "Cerca per nome",
+  "stage_add_new_button": "Aggiungi nuovo stage",
+  "addStage_title_label": "Titolo:",
+  "addStage_period_label": "Periodo:",
+  "addStage_company_label": "Azienda:",
+  "addStage_address_label": "Indirizzo azienda:",
+  "addStage_tutor_label": "Tutor aziendale:",
+  "addStage_description_label": "Descrizione:",
+  "addStage_certificate_label": "Certificato:",
+  "addStage_description_label": "Descrizione:",
+  "addStage_title_placeholder": "Aggiungi il titolo dello stage",
+  "addStage_date_from_placeholder": "Seleziona la data di inizio dello stage",
+  "addStage_date_to_placeholder": "Seleziona la data di fine dello stage",
+  "addStage_company_placeholder": "Seleziona l'azienda dello stage",
+  "addStage_address_placeholder": "Seleziona l'indirizzo dello stage",
+  "addStage_tutor_placeholder": "Seleziona il tutor dello stage",
+  "addStage_description_placeholder": "Aggiungi una descrizione dello stage",
+  "title_stage": "Alternanza scuola lavoro",
+  "title_home": "Benvenuto",
+  "title_exam": "Dettagli esame",
+  "title_add_stage": "Nuovo Stage",
+  "title_login": "",
+  "title_institute": "Dettagli istituto",
+  "title_events": "Eventi",
+  "title_curriculum": "Curriculum Vitae",
+  "title_certification": "Certificazioni",
+  "title_activities": "Attivita`",
+  "stage_delete_button":"Cancella",
+  "stage_update_button":"Modifica",
+  "alert_delete_stage_title":"Cancella esperienza",
+  "alert_delete_stage_message":"Sei sicuro di voler cancellare l'esperienza scuola-lavoro?",
+  "alert_confirm":"Conferma",
+  "alert_cancel":"Cancella",
+  "loading":"Loading...",
+  "bar-link-label":"Link utili",
+  "profile_anagrafica_label":"ANAGRAFICA",
+  "profile_contacts_label":"CONTATTI",
+  "profile_name_label":"Nome:",
+  "profile_tel_label":"Telefono:",
+  "profile_surname_label":"Cognome",
+  "profile_cel_label":"Cellulare:",
+  "profile_cf_label":"Cod. Fisc:",
+  "profile_mail_label":"Email: ",
+  "profile_birthday_label":"Data di nascita: "
+
 }
