--- a/frontend/studente/src/assets/i18n/it.json
+++ b/frontend/studente/src/assets/i18n/it.json
@@ -1,7 +1,7 @@
 {
-  "home_experiences_label": "Le mie esperience",
+  "home_experiences_label": "Le mie esperienze",
+  "home_exams_label":"Esami",
   "home_training_label": "Percorso formativo",
-  "home_experiences_label": "Le mie esperience",
   "home_stage_label": "Alternanza scuola-lavoro",
   "home_activity_label": "Attivita`",
   "home_events_label": "Eventi",
@@ -26,20 +26,39 @@
   "addStage_tutor_placeholder": "Seleziona il tutor dello stage",
   "addStage_description_placeholder": "Aggiungi una descrizione dello stage",
   "title_stage": "Alternanza scuola lavoro",
-  "title_home": "",
+  "title_home": "Benvenuto",
+  "title_exam": "Dettagli esame",
   "title_add_stage": "Nuovo Stage",
   "title_login": "",
-  "title_institute": "",
+  "title_institute": "Dettagli istituto",
   "title_events": "Eventi",
   "title_curriculum": "Curriculum Vitae",
   "title_certification": "Certificazioni",
   "title_activities": "Attivita`",
+  "title_profile":"Profilo studente",
   "stage_delete_button":"Cancella",
   "stage_update_button":"Modifica",
   "alert_delete_stage_title":"Cancella esperienza",
   "alert_delete_stage_message":"Sei sicuro di voler cancellare l'esperienza scuola-lavoro?",
   "alert_confirm":"Conferma",
   "alert_cancel":"Cancella",
-  "loading":"Loading..."
+  "loading":"Loading...",
+  "bar-link-label":"Link utili",
+  "profile_anagrafica_label":"ANAGRAFICA",
+  "profile_contacts_label":"CONTATTI",
+  "profile_name_label":"Nome: ",
+  "profile_tel_label":"Telefono: ",
+  "profile_surname_label":"Cognome: ",
+  "profile_cel_label":"Cellulare: ",
+  "profile_cf_label":"Cod. Fisc: ",
+  "profile_mail_label":"Email: ",
+  "profile_birthday_label":"Data di nascita: ",
+    "profile_update_button":"Modifica",
+    "profile_cancel_button":"Annulla",
+    "profile_confirm_button":"Salva",
+      "profile_tel_input_placeholder":"Inserire un numero di telefono",
+    "profile_cel_input_placeholder":"Inserire un numero di cellulare",
+    "profile_mail_input_placeholder":"Inserire una mail"
+
 
 }
