--- a/frontend/studente/src/assets/i18n/it.json
+++ b/frontend/studente/src/assets/i18n/it.json
@@ -29,17 +29,22 @@
   "title_home": "Benvenuto",
   "title_exam": "Dettagli esame",
   "title_add_stage": "Nuovo Stage",
+  "title_add_activity": "Nuova Attivita`",
   "title_login": "",
   "title_institute": "Dettagli istituto",
   "title_events": "Eventi",
   "title_curriculum": "Curriculum Vitae",
-  "title_certification": "Certificazioni",
+  "title_certifications": "Certificazioni",
   "title_activities": "Attivita`",
   "title_profile":"Profilo studente",
-  "stage_delete_button":"Cancella",
-  "stage_update_button":"Modifica",
+  "delete_button":"Cancella",
+  "update_button":"Modifica",
   "alert_delete_stage_title":"Cancella esperienza",
   "alert_delete_stage_message":"Sei sicuro di voler cancellare l'esperienza scuola-lavoro?",
+  "alert_delete_event_title":"Cancella evento",
+  "alert_delete_event_message":"Sei sicuro di voler cancellare l'evento ?",
+    "alert_delete_activity_title":"Cancella attivita`",
+  "alert_delete_activity_message":"Sei sicuro di voler cancellare l'attivita?",
   "alert_confirm":"Conferma",
   "alert_cancel":"Cancella",
   "loading":"Loading...",
@@ -53,12 +58,94 @@
   "profile_cf_label":"Cod. Fisc: ",
   "profile_mail_label":"Email: ",
   "profile_birthday_label":"Data di nascita: ",
-    "profile_update_button":"Modifica",
-    "profile_cancel_button":"Annulla",
-    "profile_confirm_button":"Salva",
-      "profile_tel_input_placeholder":"Inserire un numero di telefono",
-    "profile_cel_input_placeholder":"Inserire un numero di cellulare",
-    "profile_mail_input_placeholder":"Inserire una mail"
+  "profile_update_button":"Modifica",
+  "profile_cancel_button":"Annulla",
+  "profile_confirm_button":"Salva",
+  "profile_tel_input_placeholder":"Inserire un numero di telefono",
+  "profile_cel_input_placeholder":"Inserire un numero di cellulare",
+  "profile_mail_input_placeholder":"Inserire una mail",
+  "alert_delete_certification_title":"Conferma",
+  "alert_delete_certification_message":"Sei sicuro di voler annulare le modifiche?",
+  "registration_course_label":"Corso: ",
+  "registration_year_label":"Anno: ",
+  "registration_class_label":"Classe: ",
+  "registration_teachingUnit_label":"Unita` didattica: ",
+  "order_label":"Ordinamento",
+  "certificate_label":"Esame certificato",
+  "not_certificate_label":"Esame non certificato",
+  "exam_title_label":"Titolo di studio: ",
+  "exam_address_label":"Indirizzo: ",
+  "exam_result_label":"Esito: ",
+  "exam_year_label":"Anno: ",
+  "certification_add_new_button":"Aggiungi certificazione",
+  "certification_description_label":"Descrizione: ",
+  "certification_type_label":"Tipo: ",
+  "certification_duration_label":"Durata: ",
+  "certification_location_label":"Locazione: ",
+  "stage_title_label":"Titolo stage: ",
+  "stage_dateFrom_label":"Dal: ",
+  "stage_dateTo_label":"Al: ",
+  "stage_location_label":"Locazione: ",
+  "stage_description_label":"Descrizione: ",
+  "activity_add_new_button":"Aggiungi attivita'",
+  "activity_title_label":"Titolo attivita`: ",
+  "activity_dateFrom_label":"Dal: ",
+  "activity_dateTo_label":"Al: ",
+  "activity_location_label":"Locazione: ",
+  "activity_description_label":"Descrizione: ",
+  "addActivity_title_label": "Titolo attivita':",
+  "addActivity_dateFrom_label": "Dal:",
+  "addActivity_dateTo_label": "Dal:",
+  "addActivity_address_label": "Indirizzo azienda:",
+  "addActivity_tutor_label": "Tutor aziendale:",
+  "addActivity_description_label": "Descrizione:",
+  "addActivity_title_placeholder": "Aggiungi il titolo dello stage",
+  "addActivity_date_from_placeholder": "Seleziona la data di inizio ",
+  "addActivity_date_to_placeholder": "Seleziona la data di fine ",
+  "addActivity_company_placeholder": "Seleziona l'azienda",
+  "addActivity_address_placeholder": "Seleziona l'indirizzo",
+  "addActivity_tutor_placeholder": "Seleziona il tutor ",
+  "addActivity_description_placeholder": "Aggiungi una descrizione ",
+    "event_add_new_button":"Aggiungi evento",
+   "event_title_label":"Titolo evento: ",
+  "event_dateFrom_label":"Dal: ",
+  "event_dateTo_label":"Al: ",
+  "event_location_label":"Locazione: ",
+  "event_description_label":"Descrizione: ",
+  "title_add_event":"Aggiungi nuovo evento",
+  "addEvent_title_label": "Titolo evento:",
+  "addEvent_dateFrom_label": "Dal:",
+  "addEvent_dateTo_label": "Dal:",
+  "addEvent_address_label": "Indirizzo azienda:",
+  "addEvent_tutor_label": "Tutor aziendale:",
+  "addEvent_description_label": "Descrizione:",
+  "addEvent_title_placeholder": "Aggiungi il titolo",
+  "addEvent_date_from_placeholder": "Seleziona la data di inizio ",
+  "addEvent_date_to_placeholder": "Seleziona la data di fine ",
+  "addEvent_company_placeholder": "Seleziona l'azienda",
+  "addEvent_address_placeholder": "Seleziona l'indirizzo",
+  "addEvent_tutor_placeholder": "Seleziona il tutor ",
+  "addEvent_description_placeholder": "Aggiungi una descrizione ",
+    "title_add_certificate":"Aggiungi nuovo evento",
+  "addCertificate_title_label": "Titolo certificato:",
+  "addCertificate_dateFrom_label": "Dal:",
+  "addCertificate_dateTo_label": "Dal:",
+  "addCertificate_address_label": "Indirizzo azienda:",
+  "addCertificate_tutor_label": "Tutor aziendale:",
+  "addCertificate_description_label": "Descrizione:",
+  "addCertificate_title_placeholder": "Aggiungi il titolo",
+  "addCertificate_date_from_placeholder": "Seleziona la data di inizio ",
+  "addCertificate_date_to_placeholder": "Seleziona la data di fine ",
+  "addCertificate_company_placeholder": "Seleziona l'azienda",
+  "addCertificate_address_placeholder": "Seleziona l'indirizzo",
+  "addCertificate_tutor_placeholder": "Seleziona il tutor ",
+  "addCertificate_description_placeholder": "Aggiungi una descrizione ",
+  "certificate_title_label":"Titolo: ",
+  "certificate_dateFrom_label":"Da: ",
+  "certificate_dateTo_label":"A: ",
+  "certificate_location_label":"Locazione: ",
+  "certificate_description_label":"Descrizione: ",
+  "certificate_certificate_label":"Certificato"
 
 
 }
