--- a/frontend/studente/src/assets/i18n/it.json
+++ b/frontend/studente/src/assets/i18n/it.json
@@ -145,7 +145,9 @@
   "certificate_dateTo_label":"A: ",
   "certificate_location_label":"Locazione: ",
   "certificate_description_label":"Descrizione: ",
-  "certificate_certificate_label":"Certificato"
+  "certificate_certificate_label":"Certificato",
+  "save_button_label":"Salva",
+  "cancel_button_label":"Annulla"
 
 
 }
