working with styles

--- a/frontend/studente/src/assets/i18n/it.json
+++ b/frontend/studente/src/assets/i18n/it.json
@@ -1,4 +1,5 @@
 {
+  "app_name":"myCARTELLA",
   "home_experiences_label": "Le mie esperienze",
   "home_exams_label":"Esami",
   "home_training_label": "Percorso formativo",
