certificates for stages and certifications

--- a/frontend/studente/src/assets/i18n/it.json
+++ b/frontend/studente/src/assets/i18n/it.json
@@ -141,6 +141,10 @@
   "addCertificate_address_placeholder": "Seleziona l'indirizzo",
   "addCertificate_tutor_placeholder": "Seleziona il tutor ",
   "addCertificate_description_placeholder": "Aggiungi una descrizione ",
+  "addCertificate_present_certificate_label":"Certificato attuale",
+  "addCertificate_load_certificate_label":"Carica certificato",
+  "addCertificate_remove_certificate_label":"Rimuovi certificato",
+  "addCertificate_remove_actual_certificate_label":"Rimuovi certificato ",
   "certificate_title_label":"Titolo: ",
   "certificate_dateFrom_label":"Da: ",
   "certificate_dateTo_label":"A: ",
