form check in add experiences, fixed style for demo

--- a/frontend/studente/src/assets/i18n/it.json
+++ b/frontend/studente/src/assets/i18n/it.json
@@ -12,7 +12,9 @@
   "stage_filter_placeholder": "Cerca per nome",
   "stage_add_new_button": "Aggiungi nuovo stage",
   "addStage_title_label": "Titolo:",
-  "addStage_period_label": "Periodo:",
+  "addStage_period_label":"Periodo: ",
+  "addStage_dateFrom_label": "Dal:",
+  "addStage_dateTo_label": "Al:",
   "addStage_company_label": "Azienda:",
   "addStage_address_label": "Indirizzo azienda:",
   "addStage_tutor_label": "Tutor aziendale:",
@@ -73,8 +75,8 @@
   "registration_class_label":"Classe: ",
   "registration_teachingUnit_label":"Unita` didattica: ",
   "order_label":"Ordinamento",
-  "certificate_label":"Esame certificato",
-  "not_certificate_label":"Esame non certificato",
+  "institutional_label":"Istituzionale",
+  "not_institutional_label":"Non istituzionale",
   "exam_title_label":"Titolo di studio: ",
   "exam_address_label":"Indirizzo: ",
   "exam_result_label":"Esito: ",
@@ -97,9 +99,9 @@
   "activity_description_label":"Descrizione: ",
   "addActivity_title_label": "Titolo attivita':",
   "addActivity_dateFrom_label": "Dal:",
-  "addActivity_dateTo_label": "Dal:",
-  "addActivity_address_label": "Indirizzo azienda:",
-  "addActivity_tutor_label": "Tutor aziendale:",
+  "addActivity_dateTo_label": "Al:",
+  "addActivity_address_label": "Indirizzo:",
+  "addActivity_tutor_label": "Tutor:",
   "addActivity_description_label": "Descrizione:",
   "addActivity_title_placeholder": "Aggiungi il titolo dello stage",
   "addActivity_date_from_placeholder": "Seleziona la data di inizio ",
@@ -117,9 +119,9 @@
   "title_add_event":"Aggiungi nuovo evento",
   "addEvent_title_label": "Titolo evento:",
   "addEvent_dateFrom_label": "Dal:",
-  "addEvent_dateTo_label": "Dal:",
-  "addEvent_address_label": "Indirizzo azienda:",
-  "addEvent_tutor_label": "Tutor aziendale:",
+  "addEvent_dateTo_label": "Al:",
+  "addEvent_address_label": "Indirizzo:",
+  "addEvent_tutor_label": "Tutor:",
   "addEvent_description_label": "Descrizione:",
   "addEvent_title_placeholder": "Aggiungi il titolo",
   "addEvent_date_from_placeholder": "Seleziona la data di inizio ",
@@ -131,9 +133,9 @@
     "title_add_certificate":"Aggiungi nuovo certificato",
   "addCertificate_title_label": "Titolo certificato:",
   "addCertificate_dateFrom_label": "Dal:",
-  "addCertificate_dateTo_label": "Dal:",
-  "addCertificate_address_label": "Indirizzo azienda:",
-  "addCertificate_tutor_label": "Tutor aziendale:",
+  "addCertificate_dateTo_label": "Al:",
+  "addCertificate_address_label": "Indirizzo:",
+  "addCertificate_tutor_label": "Tutor:",
   "addCertificate_description_label": "Descrizione:",
   "addCertificate_title_placeholder": "Aggiungi il titolo",
   "addCertificate_date_from_placeholder": "Seleziona la data di inizio ",
