--- a/frontend/studente/www/assets/i18n/it.json
+++ b/frontend/studente/www/assets/i18n/it.json
@@ -4,7 +4,7 @@
   "home_exams_label":"Esami",
   "home_training_label": "Percorso formativo",
   "home_stage_label": "Alternanza scuola-lavoro",
-  "home_activity_label": "Attivita`",
+  "home_activity_label": "Attività",
   "home_events_label": "Eventi",
   "home_cv_label": "Curriculum Vitae",
   "home_certifications_label": "Certificazioni",
@@ -31,14 +31,14 @@
   "title_home": "Benvenuto",
   "title_exam": "Dettagli esame",
   "title_add_stage": "Nuovo Stage",
-  "title_add_activity": "Nuova Attivita`",
+  "title_add_activity": "Nuova Attività",
   "title_login": "",
   "login_subtitle":"Accedi come",
   "title_institute": "Dettagli istituto",
   "title_events": "Eventi",
   "title_curriculum": "Curriculum Vitae",
   "title_certifications": "Certificazioni",
-  "title_activities": "Attivita`",
+  "title_activities": "Attività",
   "title_profile":"La mia scheda",
   "title_notifiche":"Notifiche",
   "delete_button":"Cancella",
@@ -47,8 +47,8 @@
   "alert_delete_stage_message":"Sei sicuro di voler cancellare l'esperienza scuola-lavoro?",
   "alert_delete_event_title":"Cancella evento",
   "alert_delete_event_message":"Sei sicuro di voler cancellare l'evento ?",
-    "alert_delete_activity_title":"Cancella attivita`",
-  "alert_delete_activity_message":"Sei sicuro di voler cancellare l'attivita?",
+    "alert_delete_activity_title":"Cancella attività",
+  "alert_delete_activity_message":"Sei sicuro di voler cancellare l'attività?",
   "alert_confirm":"Conferma",
   "alert_cancel":"Cancella",
   "loading":"Loading...",
@@ -91,13 +91,13 @@
   "stage_dateTo_label":"Al: ",
   "stage_location_label":"Locazione: ",
   "stage_description_label":"Descrizione: ",
-  "activity_add_new_button":"Aggiungi attivita'",
-  "activity_title_label":"Titolo attivita`: ",
+  "activity_add_new_button":"Aggiungi attività",
+  "activity_title_label":"Titolo attività: ",
   "activity_dateFrom_label":"Dal: ",
   "activity_dateTo_label":"Al: ",
   "activity_location_label":"Locazione: ",
   "activity_description_label":"Descrizione: ",
-  "addActivity_title_label": "Titolo attivita':",
+  "addActivity_title_label": "Titolo attività:",
   "addActivity_dateFrom_label": "Dal:",
   "addActivity_dateTo_label": "Al:",
   "addActivity_address_label": "Indirizzo:",
@@ -158,7 +158,7 @@
   "cancel_button_label":"Annulla",
   "events_empty_list_label":"Non sono presenti eventi",
   "stages_empty_list_label":"Non sono presenti alternanza scuola-lavoro",
-  "activities_empty_list_label":"Non sono presenti attivita`",
+  "activities_empty_list_label":"Non sono presenti attività",
   "certifications_empty_list_label":"Non sono presenti certificati",
   "notifications_empty_list_label":"Non sono presenti notifiche",
   "consent_title": "Richiesta autorizzazione",
@@ -166,10 +166,10 @@
   "consent_accept": "Autorizzo",
   "consent_reject": "Non autorizzo",
   "toast_delete_stage":"Lo stage e` stato cancellato",
-"toast_delete_activity":"L'attivita` e` stata cancellata",
+"toast_delete_activity":"L'attività e` stata cancellata",
 "toast_delete_certification":"La certificazione e` stata cancellata",
   "toast_add_stage":"Lo stage e` stato aggiunto correttamente",
-"toast_add_activity":"L'attivita` e` stata aggiunta correttamente",
+"toast_add_activity":"L'attività e` stata aggiunta correttamente",
 "toast_add_certification":"La certificazione e` stata aggiunta correttamente",
 "subjects_registrations_label": "Materie: ",
 "subjects_registrations_title_label":"Titolo",
