--- a/frontend/studente/www/assets/i18n/it.json
+++ b/frontend/studente/www/assets/i18n/it.json
@@ -1,7 +1,7 @@
 {
-  "app_name":"myCARTELLA",
+  "app_name": "myCARTELLA",
   "home_experiences_label": "Le mie esperienze",
-  "home_exams_label":"Esami",
+  "home_exams_label": "Esami",
   "home_training_label": "Percorso formativo",
   "home_stage_label": "Alternanza scuola-lavoro",
   "home_activity_label": "Attività",
@@ -12,7 +12,7 @@
   "stage_filter_placeholder": "Cerca per nome",
   "stage_add_new_button": "Aggiungi nuovo stage",
   "addStage_title_label": "Titolo:",
-  "addStage_period_label":"Periodo: ",
+  "addStage_period_label": "Periodo: ",
   "addStage_dateFrom_label": "Dal:",
   "addStage_dateTo_label": "Al:",
   "addStage_company_label": "Azienda:",
@@ -33,70 +33,70 @@
   "title_add_stage": "Nuovo Stage",
   "title_add_activity": "Nuova Attività",
   "title_login": "",
-  "login_subtitle":"Accedi come",
+  "login_subtitle": "Accedi come",
   "title_institute": "Dettagli istituto",
   "title_events": "Eventi",
   "title_curriculum": "Curriculum Vitae",
   "title_certifications": "Certificazioni",
   "title_activities": "Attività",
-  "title_profile":"La mia scheda",
-  "title_notifiche":"Notifiche",
-  "delete_button":"Cancella",
-  "update_button":"Modifica",
-  "alert_delete_stage_title":"Cancella esperienza",
-  "alert_delete_stage_message":"Sei sicuro di voler cancellare l'esperienza scuola-lavoro?",
-  "alert_delete_event_title":"Cancella evento",
-  "alert_delete_event_message":"Sei sicuro di voler cancellare l'evento ?",
-    "alert_delete_activity_title":"Cancella attività",
-  "alert_delete_activity_message":"Sei sicuro di voler cancellare l'attività?",
-  "alert_confirm":"Conferma",
-  "alert_cancel":"Cancella",
-  "loading":"Loading...",
-  "bar-link-label":"Servizi",
-  "profile_anagrafica_label":"ANAGRAFICA",
-  "profile_contacts_label":"CONTATTI",
-  "profile_name_label":"Nome: ",
-  "profile_tel_label":"Telefono: ",
-  "profile_surname_label":"Cognome: ",
-  "profile_cel_label":"Cellulare: ",
-  "profile_cf_label":"Cod. Fisc: ",
-  "profile_mail_label":"Email: ",
-  "profile_birthday_label":"Data di nascita: ",
-  "profile_update_button":"Modifica",
-  "profile_cancel_button":"Annulla",
-  "profile_confirm_button":"Salva",
-  "profile_tel_input_placeholder":"Inserire un numero di telefono",
-  "profile_cel_input_placeholder":"Inserire un numero di cellulare",
-  "profile_mail_input_placeholder":"Inserire una mail",
-  "alert_delete_certification_title":"Conferma",
-  "alert_delete_certification_message":"Sei sicuro di voler annulare le modifiche?",
-  "registration_course_label":"Corso: ",
-  "registration_year_label":"Anno: ",
-  "registration_class_label":"Classe: ",
-  "registration_teachingUnit_label":"Unita` didattica: ",
-  "order_label":"Ordinamento",
-  "institutional_label":"Istituzionale",
-  "not_institutional_label":"Non istituzionale",
-  "exam_title_label":"Titolo di studio: ",
-  "exam_address_label":"Indirizzo: ",
-  "exam_result_label":"Esito: ",
-  "exam_year_label":"Anno: ",
-  "certification_add_new_button":"Aggiungi certificazione",
-  "certification_description_label":"Descrizione: ",
-  "certification_type_label":"Tipo: ",
-  "certification_duration_label":"Durata: ",
-  "certification_location_label":"Locazione: ",
-  "stage_title_label":"Titolo stage: ",
-  "stage_dateFrom_label":"Dal: ",
-  "stage_dateTo_label":"Al: ",
-  "stage_location_label":"Locazione: ",
-  "stage_description_label":"Descrizione: ",
-  "activity_add_new_button":"Aggiungi attività",
-  "activity_title_label":"Titolo attività: ",
-  "activity_dateFrom_label":"Dal: ",
-  "activity_dateTo_label":"Al: ",
-  "activity_location_label":"Locazione: ",
-  "activity_description_label":"Descrizione: ",
+  "title_profile": "La mia scheda",
+  "title_notifiche": "Notifiche",
+  "delete_button": "Cancella",
+  "update_button": "Modifica",
+  "alert_delete_stage_title": "Cancella esperienza",
+  "alert_delete_stage_message": "Sei sicuro di voler cancellare l'esperienza scuola-lavoro?",
+  "alert_delete_event_title": "Cancella evento",
+  "alert_delete_event_message": "Sei sicuro di voler cancellare l'evento ?",
+  "alert_delete_activity_title": "Cancella attività",
+  "alert_delete_activity_message": "Sei sicuro di voler cancellare l'attività?",
+  "alert_confirm": "Conferma",
+  "alert_cancel": "Cancella",
+  "loading": "Loading...",
+  "bar-link-label": "Servizi",
+  "profile_anagrafica_label": "ANAGRAFICA",
+  "profile_contacts_label": "CONTATTI",
+  "profile_name_label": "Nome: ",
+  "profile_tel_label": "Telefono: ",
+  "profile_surname_label": "Cognome: ",
+  "profile_cel_label": "Cellulare: ",
+  "profile_cf_label": "Cod. Fisc: ",
+  "profile_mail_label": "Email: ",
+  "profile_birthday_label": "Data di nascita: ",
+  "profile_update_button": "Modifica",
+  "profile_cancel_button": "Annulla",
+  "profile_confirm_button": "Salva",
+  "profile_tel_input_placeholder": "Inserire un numero di telefono",
+  "profile_cel_input_placeholder": "Inserire un numero di cellulare",
+  "profile_mail_input_placeholder": "Inserire una mail",
+  "alert_delete_certification_title": "Conferma",
+  "alert_delete_certification_message": "Sei sicuro di voler annulare le modifiche?",
+  "registration_course_label": "Corso: ",
+  "registration_year_label": "Anno: ",
+  "registration_class_label": "Classe: ",
+  "registration_teachingUnit_label": "Unita` didattica: ",
+  "order_label": "Ordinamento",
+  "institutional_label": "Istituzionale",
+  "not_institutional_label": "Non istituzionale",
+  "exam_title_label": "Titolo di studio: ",
+  "exam_address_label": "Indirizzo: ",
+  "exam_result_label": "Esito: ",
+  "exam_year_label": "Anno: ",
+  "certification_add_new_button": "Aggiungi certificazione",
+  "certification_description_label": "Descrizione: ",
+  "certification_type_label": "Tipo: ",
+  "certification_duration_label": "Durata: ",
+  "certification_location_label": "Locazione: ",
+  "stage_title_label": "Titolo stage: ",
+  "stage_dateFrom_label": "Dal: ",
+  "stage_dateTo_label": "Al: ",
+  "stage_location_label": "Locazione: ",
+  "stage_description_label": "Descrizione: ",
+  "activity_add_new_button": "Aggiungi attività",
+  "activity_title_label": "Titolo attività: ",
+  "activity_dateFrom_label": "Dal: ",
+  "activity_dateTo_label": "Al: ",
+  "activity_location_label": "Locazione: ",
+  "activity_description_label": "Descrizione: ",
   "addActivity_title_label": "Titolo attività:",
   "addActivity_dateFrom_label": "Dal:",
   "addActivity_dateTo_label": "Al:",
@@ -110,13 +110,13 @@
   "addActivity_address_placeholder": "Seleziona l'indirizzo",
   "addActivity_tutor_placeholder": "Seleziona il tutor ",
   "addActivity_description_placeholder": "Aggiungi una descrizione ",
-    "event_add_new_button":"Aggiungi evento",
-   "event_title_label":"Titolo evento: ",
-  "event_dateFrom_label":"Dal: ",
-  "event_dateTo_label":"Al: ",
-  "event_location_label":"Locazione: ",
-  "event_description_label":"Descrizione: ",
-  "title_add_event":"Aggiungi nuovo evento",
+  "event_add_new_button": "Aggiungi evento",
+  "event_title_label": "Titolo evento: ",
+  "event_dateFrom_label": "Dal: ",
+  "event_dateTo_label": "Al: ",
+  "event_location_label": "Locazione: ",
+  "event_description_label": "Descrizione: ",
+  "title_add_event": "Aggiungi nuovo evento",
   "addEvent_title_label": "Titolo evento:",
   "addEvent_dateFrom_label": "Dal:",
   "addEvent_dateTo_label": "Al:",
@@ -130,7 +130,7 @@
   "addEvent_address_placeholder": "Seleziona l'indirizzo",
   "addEvent_tutor_placeholder": "Seleziona il tutor ",
   "addEvent_description_placeholder": "Aggiungi una descrizione ",
-    "title_add_certificate":"Aggiungi nuovo certificato",
+  "title_add_certificate": "Aggiungi nuovo certificato",
   "addCertificate_title_label": "Titolo certificato:",
   "addCertificate_dateFrom_label": "Dal:",
   "addCertificate_dateTo_label": "Al:",
@@ -144,42 +144,43 @@
   "addCertificate_address_placeholder": "Seleziona l'indirizzo",
   "addCertificate_tutor_placeholder": "Seleziona il tutor ",
   "addCertificate_description_placeholder": "Aggiungi una descrizione ",
-  "addCertificate_present_certificate_label":"Certificato attuale",
-  "addCertificate_load_certificate_label":"Carica certificato",
-  "addCertificate_remove_certificate_label":"Rimuovi certificato",
-  "addCertificate_remove_actual_certificate_label":"Rimuovi certificato ",
-  "certificate_title_label":"Titolo: ",
-  "certificate_dateFrom_label":"Da: ",
-  "certificate_dateTo_label":"A: ",
-  "certificate_location_label":"Locazione: ",
-  "certificate_description_label":"Descrizione: ",
-  "certificate_certificate_label":"Certificato",
-  "save_button_label":"Salva",
-  "cancel_button_label":"Annulla",
-  "events_empty_list_label":"Non sono presenti eventi",
-  "stages_empty_list_label":"Non sono presenti alternanza scuola-lavoro",
-  "activities_empty_list_label":"Non sono presenti attività",
-  "certifications_empty_list_label":"Non sono presenti certificati",
-  "notifications_empty_list_label":"Non sono presenti notifiche",
+  "addCertificate_present_certificate_label": "Certificato attuale",
+  "addCertificate_load_certificate_label": "Carica certificato",
+  "addCertificate_remove_certificate_label": "Rimuovi certificato",
+  "addCertificate_remove_actual_certificate_label": "Rimuovi certificato ",
+  "certificate_title_label": "Titolo: ",
+  "certificate_dateFrom_label": "Da: ",
+  "certificate_dateTo_label": "A: ",
+  "certificate_location_label": "Locazione: ",
+  "certificate_description_label": "Descrizione: ",
+  "certificate_certificate_label": "Certificato",
+  "save_button_label": "Salva",
+  "cancel_button_label": "Annulla",
+  "events_empty_list_label": "Non sono presenti eventi",
+  "stages_empty_list_label": "Non sono presenti alternanza scuola-lavoro",
+  "activities_empty_list_label": "Non sono presenti attività",
+  "certifications_empty_list_label": "Non sono presenti certificati",
+  "notifications_empty_list_label": "Non sono presenti notifiche",
   "consent_title": "Richiesta autorizzazione",
   "consent_text": "Lorem ipsum ....",
   "consent_accept": "Autorizzo",
   "consent_reject": "Non autorizzo",
-  "toast_delete_stage":"Lo stage e` stato cancellato",
-"toast_delete_activity":"L'attività e` stata cancellata",
-"toast_delete_certification":"La certificazione e` stata cancellata",
-  "toast_add_stage":"Lo stage e` stato aggiunto correttamente",
-"toast_add_activity":"L'attività e` stata aggiunta correttamente",
-"toast_add_certification":"La certificazione e` stata aggiunta correttamente",
-"subjects_registrations_label": "Materie: ",
-"subjects_registrations_title_label":"Titolo",
-"subjects_registrations_teacher_label":"Insegnante",
-"subjects_no_registrations_label":"Non sono presenti materie registrate",
-"profile_remove_picture_label":"Rimuovi immagine",
-"alert_map_location_title":"Indirizzo selezionato",
-"alert_map_location_message":"L'indirizzo e` {{value}}",
-"field_missing_label":"Campo obbligatorio",
-"addCertificate_title_missing_label":"Titolo del Certificato mancante",
-"addCertificate_description_missing_label":"Descrizione del certificato mancante",
-"toast_error_fields_missing":"Campi obbligatori non inseriti"
+  "toast_delete_stage": "Lo stage e` stato cancellato",
+  "toast_delete_activity": "L'attività e` stata cancellata",
+  "toast_delete_certification": "La certificazione e` stata cancellata",
+  "toast_add_stage": "Lo stage e` stato aggiunto correttamente",
+  "toast_add_activity": "L'attività e` stata aggiunta correttamente",
+  "toast_add_certification": "La certificazione e` stata aggiunta correttamente",
+  "subjects_registrations_label": "Materie: ",
+  "subjects_registrations_title_label": "Titolo",
+  "subjects_registrations_teacher_label": "Insegnante",
+  "subjects_no_registrations_label": "Non sono presenti materie registrate",
+  "profile_remove_picture_label": "Rimuovi immagine",
+  "alert_map_location_title": "Indirizzo selezionato",
+  "alert_map_location_message": "L'indirizzo e` {{value}}",
+  "field_missing_label": "Campo obbligatorio",
+  "addCertificate_title_missing_label": "Titolo del Certificato mancante",
+  "addCertificate_description_missing_label": "Descrizione del certificato mancante",
+  "toast_error_fields_missing": "Campi obbligatori non inseriti",
+  "addCertificate_error_date": "Data non corretta"
 }
