added mobilities, updated fileds to show in experiences, now it is possible to add certificates to istitutional experiences

--- a/frontend/studente/src/assets/i18n/it.json
+++ b/frontend/studente/src/assets/i18n/it.json
@@ -4,6 +4,7 @@
   "home_exams_label": "Esami",
   "home_training_label": "Percorso formativo",
   "home_stage_label": "Alternanza scuola-lavoro",
+  "home_mobility_label": "Mobilità",
   "home_activity_label": "Attività",
   "home_events_label": "Eventi",
   "home_cv_label": "Curriculum Vitae",
@@ -11,6 +12,9 @@
   "stage_order_label": "Ordina",
   "stage_filter_placeholder": "Cerca per nome",
   "stage_add_new_button": "Aggiungi nuovo stage",
+  "mobility_order_label":"Ordina",
+    "mobility_filter_placeholder": "Cerca per nome",
+  "mobility_add_new_button": "Aggiungi nuova mobilità",
   "addStage_title_label": "Titolo:",
   "addStage_period_label": "Periodo: ",
   "addStage_dateFrom_label": "Dal:",
@@ -27,10 +31,24 @@
   "addStage_address_placeholder": "Seleziona l'indirizzo dello stage",
   "addStage_tutor_placeholder": "Seleziona il tutor dello stage",
   "addStage_description_placeholder": "Aggiungi una descrizione dello stage",
+    "addMobility_title_label": "Titolo:",
+  "addMobility_dateFrom_label": "Dal:",
+  "addMobility_dateTo_label": "Al:",
+  "addMobility_location_label": "Luogo:",
+  "addMobility_language_label": "Lingua:",
+  "addMobility_description_label": "Descrizione:",
+  "addMobility_title_placeholder": "Aggiungi il titolo dello",
+  "addMobility_date_from_placeholder": "Seleziona la data di inizio della mobilità",
+  "addMobility_date_to_placeholder": "Seleziona la data di fine della mobilità",
+  "addMobility_location_placeholder": "Inserisci il luogo della mobilità",
+  "addMobility_language_placeholder": "Inserisci la lingua della mobilità",
+  "addMobility_description_placeholder": "Aggiungi una descrizione della mobilità",
   "title_stage": "Alternanza scuola lavoro",
   "title_home": "Benvenuto",
   "title_exam": "Dettagli esame",
+  "title_mobility": "Mobilità",
   "title_add_stage": "Nuovo Stage",
+  "title_add_mobility": "Nuova Mobilità",
   "title_add_activity": "Nuova Attività",
   "title_login": "",
   "login_subtitle": "Accedi come",
@@ -92,7 +110,13 @@
   "stage_dateFrom_label": "Dal: ",
   "stage_dateTo_label": "Al: ",
   "stage_location_label": "Locazione: ",
-  "stage_description_label": "Descrizione: ",
+  "stage_description_label":"Description: ",
+  "mobility_title_label": "Titolo stage: ",
+  "mobility_dateFrom_label": "Dal: ",
+  "mobility_dateTo_label": "Al: ",
+  "mobility_location_label": "Locazione: ",
+  "mobility_language_label": "Lingua: ",
+  "mobility_description_label": "Descrizione: ",
   "activity_add_new_button": "Aggiungi attività",
   "activity_title_label": "Titolo attività: ",
   "activity_dateFrom_label": "Dal: ",
@@ -138,6 +162,7 @@
   "addCertificate_dateTo_label": "Al:",
   "addCertificate_address_label": "Indirizzo:",
   "addCertificate_tutor_label": "Tutor:",
+  "addCertificate_certifier_label": "Istituto certificante:",
   "addCertificate_description_label": "Descrizione:",
   "addCertificate_title_placeholder": "Aggiungi il titolo",
   "addCertificate_date_from_placeholder": "Seleziona la data di inizio ",
@@ -145,6 +170,7 @@
   "addCertificate_company_placeholder": "Seleziona l'azienda",
   "addCertificate_address_placeholder": "Seleziona l'indirizzo",
   "addCertificate_tutor_placeholder": "Seleziona il tutor ",
+  "addCertificate_certifier_placeholder": "Inserisci il nome dell'istituto certificante",
   "addCertificate_description_placeholder": "Aggiungi una descrizione ",
   "addCertificate_present_certificate_label": "Certificato attuale",
   "addCertificate_load_certificate_label": "Carica certificato",
@@ -155,6 +181,7 @@
   "certificate_dateTo_label": "A: ",
   "certificate_location_label": "Locazione: ",
   "certificate_description_label": "Descrizione: ",
+  "certificate_certifier_label": "Istituto certificante: ",
   "certificate_certificate_label": "Certificato",
   "save_button_label": "Salva",
   "cancel_button_label": "Annulla",
@@ -168,9 +195,11 @@
   "consent_accept": "Autorizzo",
   "consent_reject": "Non autorizzo",
   "toast_delete_stage": "Lo stage e` stato cancellato",
+  "toast_delete_mobility": "La mobilità e` stato cancellata",
   "toast_delete_activity": "L'attività e` stata cancellata",
   "toast_delete_certification": "La certificazione e` stata cancellata",
   "toast_add_stage": "Lo stage e` stato aggiunto correttamente",
+  "toast_add_mobility": "La mobilità e` stato aggiunto correttamente",
   "toast_add_activity": "L'attività e` stata aggiunta correttamente",
   "toast_add_certification": "La certificazione e` stata aggiunta correttamente",
   "subjects_registrations_label": "Materie: ",
@@ -184,5 +213,13 @@
   "addCertificate_title_missing_label": "Titolo del Certificato mancante",
   "addCertificate_description_missing_label": "Descrizione del certificato mancante",
   "toast_error_fields_missing": "Campi obbligatori non inseriti",
-  "addCertificate_error_date": "Data non corretta"
+  "addCertificate_error_date": "Data non corretta",
+  "add_certificate_button":"Aggiungi certificato",
+  "addCertificate_save_certificate_label":"Salva",
+  "modify_certificate_button":"Modifica certificato",
+  "alert_remove_certificate_mobility_title":"Rimozione certificato",
+  "alert_remove_certificate_mobility_message":"Sei sicuro di voler rimuovere il certificato?",
+  "alert_delete_mobility_title":"Cancella mobilità",
+  "alert_delete_mobility_message":"Sei sicuro di voler cancellare la mobilità?",
+  "toast_delete_certificate":"Il certificato e` stato cancellato"
 }
