working on multiple files, changed from certificate to document

--- a/frontend/studente/src/assets/i18n/en.json
+++ b/frontend/studente/src/assets/i18n/en.json
@@ -28,7 +28,7 @@
   "addStage_address_label": "Indirizzo azienda:",
   "addStage_tutor_label": "Tutor aziendale:",
   "addStage_description_label": "Descrizione:",
-  "addStage_certificate_label": "Certificato:",
+  "addStage_document_label": "Certificato:",
   "addStage_title_placeholder": "Aggiungi il titolo dello stage",
   "addStage_date_from_placeholder": "Seleziona la data di inizio dello stage",
   "addStage_duration_placeholder": "Seleziona la durata",
@@ -45,7 +45,7 @@
   "addJob_address_label": "Indirizzo azienda:",
   "addJob_tutor_label": "Tutor aziendale:",
   "addJob_description_label": "Descrizione:",
-  "addJob_certificate_label": "Certificato:",
+  "addJob_document_label": "Certificato:",
   "addJob_title_placeholder": "Aggiungi il titolo dell'esperienza lavorativa",
   "addJob_date_from_placeholder": "Seleziona la data di inizio dell'esperienza lavorativa",
   "addJob_date_to_placeholder": "Seleziona la data di fine dell'esperienza lavorativa",
@@ -187,33 +187,33 @@
   "addEvent_address_placeholder": "Seleziona l'indirizzo",
   "addEvent_tutor_placeholder": "Seleziona il tutor ",
   "addEvent_description_placeholder": "Aggiungi una descrizione ",
-  "title_add_certificate": "Aggiungi nuovo certificato",
-  "addCertificate_title_label": "Titolo certificato:",
-  "addCertificate_dateFrom_label": "Dal:",
-  "addCertificate_dateTo_label": "Al:",
-  "addCertificate_address_label": "Indirizzo:",
-  "addCertificate_tutor_label": "Tutor:",
-  "addCertificate_certifier_label": "Istituto certificante:",
-  "addCertificate_description_label": "Descrizione:",
-  "addCertificate_title_placeholder": "Aggiungi il titolo",
-  "addCertificate_date_from_placeholder": "Seleziona la data di inizio ",
-  "addCertificate_date_to_placeholder": "Seleziona la data di fine ",
-  "addCertificate_company_placeholder": "Seleziona l'azienda",
-  "addCertificate_address_placeholder": "Seleziona l'indirizzo",
-  "addCertificate_tutor_placeholder": "Seleziona il tutor ",
-  "addCertificate_certifier_placeholder": "Inserisci il nome dell'istituto certificante",
-  "addCertificate_description_placeholder": "Aggiungi una descrizione ",
-  "addCertificate_present_certificate_label": "Certificato attuale",
-  "addCertificate_load_certificate_label": "Carica certificato",
-  "addCertificate_remove_certificate_label": "Rimuovi certificato",
-  "addCertificate_remove_actual_certificate_label": "Rimuovi certificato ",
-  "certificate_title_label": "Titolo: ",
-  "certificate_dateFrom_label": "Da: ",
-  "certificate_dateTo_label": "A: ",
-  "certificate_location_label": "Locazione: ",
-  "certificate_description_label": "Descrizione: ",
-  "certificate_certifier_label": "Istituto certificante: ",
-  "certificate_certificate_label": "Certificato",
+  "title_add_document": "Aggiungi nuovo documento",
+  "addDocument_title_label": "Titolo documento:",
+  "addDocument_dateFrom_label": "Dal:",
+  "addDocument_dateTo_label": "Al:",
+  "addDocument_address_label": "Indirizzo:",
+  "addDocument_tutor_label": "Tutor:",
+  "addDocument_certifier_label": "Istituto certificante:",
+  "addDocument_description_label": "Descrizione:",
+  "addDocument_title_placeholder": "Aggiungi il titolo",
+  "addDocument_date_from_placeholder": "Seleziona la data di inizio ",
+  "addDocument_date_to_placeholder": "Seleziona la data di fine ",
+  "addDocument_company_placeholder": "Seleziona l'azienda",
+  "addDocument_address_placeholder": "Seleziona l'indirizzo",
+  "addDocument_tutor_placeholder": "Seleziona il tutor ",
+  "addDocument_certifier_placeholder": "Inserisci il nome dell'istituto certificante",
+  "addDocument_description_placeholder": "Aggiungi una descrizione ",
+  "addDocument_present_document_label": "Certificato attuale",
+  "addDocument_load_document_label": "Carica documento",
+  "addDocument_remove_document_label": "Rimuovi documento",
+  "addDocument_remove_actual_document_label": "Rimuovi documento ",
+  "document_title_label": "Titolo: ",
+  "document_dateFrom_label": "Da: ",
+  "document_dateTo_label": "A: ",
+  "document_location_label": "Locazione: ",
+  "document_description_label": "Descrizione: ",
+  "document_certifier_label": "Istituto certificante: ",
+  "document_document_label": "Certificato",
   "save_button_label": "Salva",
   "cancel_button_label": "Annulla",
   "events_empty_list_label": "Non sono presenti eventi",
@@ -244,22 +244,22 @@
   "alert_map_location_title": "Indirizzo selezionato",
   "alert_map_location_message": "L'indirizzo e` {{value}}",
   "field_missing_label": "Campo obbligatorio",
-  "addCertificate_title_missing_label": "Titolo del Certificato mancante",
-  "addCertificate_description_missing_label": "Descrizione del certificato mancante",
+  "addDocument_title_missing_label": "Titolo del Certificato mancante",
+  "addDocument_description_missing_label": "Descrizione del documento mancante",
   "toast_error_fields_missing": "Campi obbligatori non inseriti",
-  "addCertificate_error_date": "Data non corretta",
-  "add_certificate_button": "Aggiungi certificato",
-  "addCertificate_save_certificate_label": "Salva",
-  "modify_certificate_button": "Modifica certificato",
-  "alert_remove_certificate_mobility_title": "Rimozione certificato",
-  "alert_remove_certificate_mobility_message": "Sei sicuro di voler rimuovere il certificato?",
+  "addDocument_error_date": "Data non corretta",
+  "add_document_button": "Aggiungi documento",
+  "addDocument_save_document_label": "Salva",
+  "modify_document_button": "Modifica documento",
+  "alert_remove_document_mobility_title": "Rimozione documento",
+  "alert_remove_document_mobility_message": "Sei sicuro di voler rimuovere il documento?",
   "alert_delete_mobility_title": "Cancella mobilità",
   "alert_delete_mobility_message": "Sei sicuro di voler cancellare la mobilità?",
-  "toast_delete_certificate": "Il certificato e` stato cancellato",
+  "toast_delete_document": "Il documento e` stato cancellato",
   "cert_type_lang": "Lingua",
   "cert_type_other": "Altro",
-  "addCertificate_lang_placeholder": "Inserisci la lingua",
-  "addCertificate_level_placeholder": "Inserisci il livello",
+  "addDocument_lang_placeholder": "Inserisci la lingua",
+  "addDocument_level_placeholder": "Inserisci il livello",
   "stage_contact_label":"Contatto: ",
   "stage_duration_label":"Durata (ore): "
 }
