Fixes for label translation and removal of hardcode statments.

--- a/frontend/studente/src/assets/i18n/it.json
+++ b/frontend/studente/src/assets/i18n/it.json
@@ -95,7 +95,7 @@
   "alert_delete_activity_message": "Sei sicuro di voler cancellare l'attività?",
   "alert_confirm": "Conferma",
   "alert_cancel": "Cancella",
-  "loading": "Loading...",
+  "loading": "Caricamento in corso...",
   "bar-link-label": "Servizi",
   "profile_anagrafica_label": "ANAGRAFICA",
   "profile_contacts_label": "CONTATTI",
@@ -138,12 +138,12 @@
   "stage_dateFrom_label": "Dal: ",
   "stage_dateTo_label": "Al: ",
   "stage_location_label": "Locazione: ",
-  "stage_description_label":"Description: ",
+  "stage_description_label":"Descrizione: ",
   "job_title_label": "Titolo esperienza: ",
   "job_dateFrom_label": "Dal: ",
   "job_dateTo_label": "Al: ",
   "job_location_label": "Locazione: ",
-  "job_description_label":"Description: ",
+  "job_description_label":"Descrizione: ",
   "mobility_title_label": "Titolo stage: ",
   "mobility_dateFrom_label": "Dal: ",
   "mobility_dateTo_label": "Al: ",
