--- a/frontend/studente/src/assets/i18n/en.json
+++ b/frontend/studente/src/assets/i18n/en.json
@@ -76,6 +76,7 @@
   "title_add_activity": "Nuova Attività",
   "title_login": "",
   "login_subtitle": "Accedi come",
+  "logout_label": "Logout",
   "title_institute": "Dettagli istituto",
   "title_events": "Eventi",
   "title_curriculum": "Curriculum Vitae",
